# zbar-opencv-demo

./: CMakeLists.txt  FindZBar0.cmake  README.md  main.cpp  main.py
